--- a/src/layout/index.less
+++ b/src/layout/index.less
@@ -1,12 +1,42 @@
-//:global{
+.layout{
+  width: 100%;
+  height: 100%;
+  background-color: antiquewhite;
+  :global{
+    .layout-content{
+      background-color: red;
+      height: 400px;
+      height: 400px;
+    }
+  }
+}
   .menuFooter{
     width: 100%;
     height: 40px;
     overflow: hidden;
     background-color: aquamarine;
-    //position: fixed;
-    //bottom: 0;
-    //left: 0;
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    overflow:hidden;
+    :global{
+      .active{
+        background-color: black;
+      }
+      ul{
+        width: 100%;
+        height: 100%;
+        display: flex;
+        justify-content: space-around;
+        align-items: center;
+        li{
+          width: 40px;
+          height: 40px;
+          display: flex;
+          flex-direction: column;
+          justify-content: center;
+          align-items: center;
+        }
+      }
+    }
   }
-//}
-
